Fix weird spacing caused by background overlay

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -13,12 +13,12 @@ $background-opacity: 0.7;
   @if $show-home-image {
     &#bg-img {
       background: $home-image;
-      background-attachment: fixed;
+      background-attachment: scroll;
       background-size: cover;
 
       &:after {
         content: "";
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         width: 100%;
